# IPP-Polynomials

./: CMakeLists.txt  MainPage.dox  README.md
src/: calc.c  monovector.c  monovector.h  newstring.c  newstring.h  poly.c  poly.h  polystack.c  polystack.h
